force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/breg_WEB_WEB_STOCKS__c.object-meta.xml
<CustomObject>
    <label>WEB STOCKS</label>
    <nameField>
        <label>WEB STOCKS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB STOCKSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>