force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_Web_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Web_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WEB STOCKSs</relationshipLabel>
    <relationshipName>WEB_STOCKSs</relationshipName>
    <type>Lookup</type>
</CustomField>