force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_END_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_END_DT__c</fullName>
    <label>END DT</label>
    <type>Date</type>
</CustomField>