force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_PAID_SHARES__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PAID_SHARES__c</fullName>
    <label>PAID SHARES</label>
    <length>20</length>
    <type>Text</type>
</CustomField>