force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_PAR_VALUE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PAR_VALUE__c</fullName>
    <label>PAR VALUE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>