force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_REMARKS__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_REMARKS__c</fullName>
    <label>REMARKS</label>
    <length>240</length>
    <type>Text</type>
</CustomField>