force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_SHARES_CNT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SHARES_CNT__c</fullName>
    <label>SHARES CNT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>