force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_STOCK_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_STOCK_AMOUNT__c</fullName>
    <label>STOCK AMOUNT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>