force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_STOCK_DATE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_STOCK_DATE__c</fullName>
    <label>STOCK DATE</label>
    <type>Date</type>
</CustomField>