force-app/main/default/objects/breg_WEB_WEB_STOCKS__c/fields/breg_WEB_STOCK_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_STOCK_ID__c</fullName>
    <externalId>true</externalId>
    <label>STOCK ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>